# SmallProjectsAndDev

./: .clang-format  .gitignore  LICENSE  README.md
ACA_of_density/: CMakeLists.txt  common.h  fake_density.h  main.cpp
alkane_chains/: CMakeLists.txt  README.md  alkane_chains.cpp
code_tests/hierarchical_clustering/: CMakeLists.txt  Readme.md  atom.cpp  atom.h  atom_example.cpp  cluster.h  clusterable.h  clusterable_example.cpp
code_tests/hosvd/: hosvd.cpp
code_tests/n_for_each/: README.md  n_for_each_example.cpp
code_tests/parameter_pack_snippets/: README.md  capture_types.h  expand_type_example.cpp  first_type.h  integer_sequence.h  last_type.h
code_tests/ref_issues/: test_functions.cpp
code_tests/tensortrain/: tt.cpp
code_tests/type_conversions_with_operators/: addition_conversions.cpp
data_plotting/: compression_data.hs
functions/: README.md
functions/n_for_each/: n_for_each.h
leetcode/: README.md  p1.cpp  p2.cpp
project_euler/: README.md
project_euler/cpp/: problem_1.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp  template.cpp
project_euler/haskell/: problem_1.hs  problem_2.hs  problem_3.hs  problem_4  problem_4.hs  template.hs
